--- a/.gitignore
+++ b/.gitignore
@@ -36,11 +36,9 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 # dotenv environment variable files
-.env.development
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
+.env
+.env.*.local
+
 
 # temp directory
 .temp
